[package]
name = "vector-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"

[workspace]
resolver = "2"

[profile.dev.eframe]
opt-level = 2

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3